--- a/src/main/resources/db/changelog/2025_01_08_init_db.yaml
+++ b/src/main/resources/db/changelog/2025_01_08_init_db.yaml
@@ -54,4 +54,13 @@ databaseChangeLog:
                   type: datetime
                   constraints:
                     nullable: false
+  - changeSet:
+      id: renameColumnAndChangeDatatype
+      author: nastinka_krd
+      changes:
+        - renameColumn:
+            tableName: notification
+            oldColumnName: planning_date_and_time
+            newColumnName: planning_date
+            columnDataType: date
 
