--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,9 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.nastinka_krd</groupId>
+            <groupId>com.nastinka_krd.user_management</groupId>
             <artifactId>api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
