--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>3.4.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.nastinka_krd</groupId>
-    <artifactId>notification-management</artifactId>
+    <groupId>com.nastinka_krd.fooddelivery.notifications</groupId>
+    <artifactId>notification-service-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>notification-management</name>
-    <description>notification-management</description>
+    <name>notification-service-parent</name>
+    <description>notification-service-parent</description>
     <url/>
     <licenses>
         <license/>
