--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,12 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
+      - name: Run tests with JaCoCo
+        run: mvn clean test jacoco:report
+
+      - name: Upload to Coveralls
+        run: mvn coveralls:report -DrepoToken=${{ secrets.COVERALLS_REPO_TOKEN }}
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
