--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,13 @@
 server:
   port: 8081
 spring:
+  kafka:
+    bootstrap-servers: ${FD_KAFKA_BS:localhost:9092}
   mail:
     host: ${MAIL_HOST:smtp.gmail.com}
     port: ${MAIL_PORT:587}
-    username: ${MAIL_USERNAME:}
-    password: ${MAIL_PASSWORD}
+    username: ${MAIL_USERNAME:username@gmail.com}
+    password: ${MAIL_PASSWORD:password}
     properties:
       mail:
         smtp:
