--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,6 +19,12 @@ jobs:
           distribution: temurin
           java-version: '17'
 
+      - name: Run tests with JaCoCo
+        run: mvn clean test jacoco:report
+
+      - name: Upload to Coveralls
+        run: mvn coveralls:report -DrepoToken=${{ secrets.COVERALLS_REPO_TOKEN }}
+
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
