--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,8 +22,15 @@ jobs:
       - name: Run tests with JaCoCo
         run: mvn clean test jacoco:report
 
-      - name: Upload to Coveralls
-        run: mvn coveralls:report -DrepoToken=${{ secrets.COVERALLS_REPO_TOKEN }}
+      - name: npm install, make test-coverage
+        run: |
+          npm install
+          make test-coverage
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
+#      - name: Upload to Coveralls
+#        run: mvn coveralls:report -DrepoToken=${{ secrets.COVERALLS_REPO_TOKEN }}
 
       - name: Build with Maven
         run: mvn clean package -DskipTests
