--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,6 +22,10 @@ jobs:
       - name: Run tests with JaCoCo
         run: mvn clean test jacoco:report
 
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
       - name: npm install, make test-coverage
         run: |
           npm install
