--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: 16.x
       - name: npm install, make test-coverage
-        working-directory: ./notification_management
+        working-directory: ../../notification_management
         run: |
           npm install
           make test-coverage
