--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,6 +16,20 @@ jobs:
 
 
     steps:
+      - name: gen settings
+        run: cat <<EOF | tee settings.xml
+            <settings>
+            <servers>
+            <server>
+            <id>github</id>
+            <username>${GITHUB_USERNAME}</username>
+            <password>${GH_PACKAGES_TOKEN}</password>
+            </server>
+            </servers>
+            </settings>
+            EOF
+
+
       - name: Checkout code
         uses: actions/checkout@v3
 
