--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,17 +17,7 @@ jobs:
 
     steps:
       - name: gen settings
-        run: cat <<EOF | tee settings.xml
-            <settings>
-            <servers>
-            <server>
-            <id>github</id>
-            <username>${GITHUB_USERNAME}</username>
-            <password>${GH_PACKAGES_TOKEN}</password>
-            </server>
-            </servers>
-            </settings>
-            EOF
+        run: bash scripts/genMvnSettings.sh
 
 
       - name: Checkout code
