--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,6 +8,7 @@ on:
 env:
     GITHUB_USERNAME: ${{ github.actor }}
     GH_PACKAGES_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
+    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   build:
