--- a/src/main/resources/db/changelog/2025_01_08_init_db.yaml
+++ b/src/main/resources/db/changelog/2025_01_08_init_db.yaml
@@ -4,18 +4,32 @@ databaseChangeLog:
       author: nastinka_krd
       changes:
         - createTable:
-            tableName: user
+            tableName: fd_user
             columns:
               - column:
                   name: id
                   type: int
-                  autoIncrement: true
                   constraints:
                     primaryKey: true
                     primaryKeyName: user_pk
                     nullable: false
               - column:
+                  name: username
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
                   name: email
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: password
+                  type: varchar
+                  constraints:
+                    nullable: false
+              - column:
+                  name: role
                   type: varchar
                   constraints:
                     nullable: false
